--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
     <!-- control -->
     <div id="control">
-        <img loading="eager" style="border-radius: var(--img-border-radius); transform: scale(0.8);-webkit-transform: scale(0.8)" id="music_png" src="./svg/notPlayMusic.svg" width="100" height="100">
+        <img loading="eager" style="transform: scale(0.8);-webkit-transform: scale(0.8)" id="music_png" src="./svg/notPlayMusic.svg" width="100" height="100">
 
         <!-- music control -->
         <div id="control_music">
-            <img loading="eager" src="./svg/upDownMusic.svg" width="100" height="100">
+            <img loading="eager" x-on:mouseup="" src="./svg/upDownMusic.svg" width="100" height="100">
             <img loading="eager" src="./svg/music_stop.svg" width="100" height="100" id="ed" x-on:mouseup="playAndPause()">
             <img loading="eager" src="./svg/upDownMusic.svg" style="-webkit-transform: rotate(180deg) translateX(-10px);transform: rotate(180deg) translateX(-10px);" width="100" height="100">
         </div>
@@ -76,7 +76,7 @@
 
             <!-- setting box -->
             <div x-show="start">
-                <button></button>
+                <button x-on:mouseup="location.reload();">reload</button>
             </div>
 
             <!-- setting image -->
