--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <!-- music home -->
     <div id="home">
         <button id="a" x-on:mouseup="play_music({id_src: id_a,music_src: './src_music/黒皇帝 - Galaxy Collapse.mp3'},'a')" x-bind:musiced="played && play_name=='a' ? 'true' : 'false'" >黒皇帝 - Galaxy Collapse</button>
-        <button id="b" x-on:mouseup="play_music({id_src: id_b,music_src: './src_music/red zone.mp3'},'b')" x-bind:musiced="played && play_name=='b' ? 'true' : 'false'" >red zone</button>
+        <button id="b" x-on:mouseup="play_music({id_src: id_b,music_src: './src_music/red zone.mp3'},'b')" x-bind:musiced="played && play_name=='b' ? 'true' : 'false'" >red zone(简称蓝屏钙)</button>
     </div>
 
     <!-- control -->
