--- a/index.html
+++ b/index.html
@@ -18,14 +18,28 @@
 
     <script>
         var temp=document.createElement('audio');
-        var music_list=["./src_music/黒皇帝 - Galaxy Collapse.mp3","./src_music/red zone.mp3"];
-        var img_list=["./src_png/黒皇帝 - Galaxy Collapse.jpg","./src_png/red zone.jpeg"]
+        var music_list=["./src_music/黒皇帝 - Galaxy Collapse.mp3",
+        "./src_music/red zone.mp3",
+        "./src_music/TheFatRat - Unity.mp3",
+        "./src_music/WF_Liang - See Tình（0.8x）.mp3",
+        "./src_music/青春畅想.mp3"];
+        
+        var img_list=["./src_png/黒皇帝 - Galaxy Collapse.jpg",
+        "./src_png/red zone.jpeg",
+        null,
+        null,
+        null];
+        
         var ID=0;
 
         function play_music(numberID,el) {
           ID=numberID;
             // set img src
-            $('#music_png')[0].src=img_list[ID];
+            if(!!img_list[ID]){
+              $('#music_png')[0].src=img_list[ID];
+            }else{
+              $('#music_png')[0].src='./svg/notPlayMusic.svg';
+            }
             // add music and play music
             temp.src=music_list[ID];
             temp.volume=1;
@@ -51,13 +65,13 @@
     </script>
 </head>
 <body>
-	<!-- load music(只是单纯加载) -->
-    <audio src="./src_music/黒皇帝 - Galaxy Collapse.mp3" load="auto"></audio>
-    <audio src="./src_music/red zone.mp3" load="auto"></audio>
     <!-- music home -->
     <div id="home">
         <button id="a" x-on:mouseup="play_music(0,$('#a')[0])" x-bind:musiced="played && play_name==$('#a')[0] ? 'true' : 'false'" >黒皇帝 - Galaxy Collapse</button>
         <button id="b" x-on:mouseup="play_music(1,$('#b')[0])" x-bind:musiced="played && play_name==$('#b')[0] ? 'true' : 'false'" >red zone(简称蓝屏钙)</button>
+        <button id="c" x-on:mouseup="play_music(2,$('#c')[0])" x-bind:musiced="played && play_name==$('#c')[0] ? 'true' : 'false'">TheFatRat - Unity</button>
+        <button id="d" x-on:mouseup="play_music(3,$('#d')[0])" x-bind:musiced="played && play_name==$('#d')[0] ? 'true' : 'false'">WF_Liang - See Tình（0.8x）</button>
+        <button id="e" x-on:mouseup="play_music(4,$('#e')[0])" x-bind:musiced="played && play_name==$('#e')[0] ? 'true' : 'false'">青春畅享</button>
     </div>
 
     <!-- control -->
