--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>My music</title>
     <!-- style file -->
     <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./svg/icon.svg">
     <!-- js  -->
     <script src="./alpine.js" defer></script>
     <script src="./jquery.js"></script>
