update... Idot's no update

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@ play_name: ''
 <body>
      <!-- music home -->
      <div id="home">
+         <p style="color: gray;background: yellow;padding: 10px;font-size: 20px;">音乐来自酷狗音乐，图片也来自酷狗音乐，网页只是随便做做，寒假太无聊而已(没&nbsp;侵&nbsp;权&nbsp;啊</p>
           <button id="a" x-on:mouseup="play_music(0,$('#a')[0])" x-bind:musiced="played && play_name==$('#a')[0] ? 'true' : 'false'">黑皇帝 - Galaxy Collapse</button>
           <button id="b" x-on:mouseup="play_music(1,$('#b')[0])" x-bind:musiced="played && play_name==$('#b')[0] ? 'true' : 'false'">red zone(简称蓝屏钙)</button>
           <button id="c" x-on:mouseup="play_music(2,$('#c')[0])" x-bind:musiced="played && play_name==$('#c')[0] ? 'true' : 'false'">TheFatRat - Unity</button>
